--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="poke.css" />
+    <link rel="stylesheet" href="poke.css" />               
 </head>
 <body>
-    <h1>Poke cast</h1>
+    <h1 style="color:red;">Poke cast</h1>
     <div id="poke_container" class="poke-container"></div>
 </body>
-<script src="poke.js"></script>
+<script src="poke.js"></script>                             
 </html>
